force-app/main/default/objects/MUSW__Reference__c/MUSW__Reference__c.object-meta.xml
<CustomObject>
    <label>Reference</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>