force-app/main/default/objects/MUSW__Reference__c/fields/MUSW__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>