force-app/main/default/objects/MUSW__Reference__c/fields/MUSW__Phone__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>