force-app/main/default/objects/MUSW__Reference__c/fields/MUSW__Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>References</relationshipLabel>
    <relationshipName>References</relationshipName>
    <type>Lookup</type>
</CustomField>