force-app/main/default/objects/MUSW__Reference__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <description>Will be sourced from a new Global picklist (note: this could be the same global picklist used on the Experience object, Type field).</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Professional_Types</valueSetName>
    </valueSet>
</CustomField>