force-app/main/default/objects/MUSW__Reference__c/fields/MUSW__Years_Known__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Years_Known__c</fullName>
    <label>Years Known</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>